# LLM_for_Robotics

./: .gitignore  README.md
src/cartesian_parameters_server/: CMakeLists.txt  package.xml
src/cartesian_parameters_server/src/: cartesian_parameters_server.cpp  client_test.cpp
src/cartesian_pose_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/cartesian_pose_controller/config/: controllers.yaml
src/cartesian_pose_controller/include/cartesian_pose_controller/: cartesian_pose_controller.hpp
src/cartesian_pose_controller/launch/: franka.launch.py  start.py
src/cartesian_pose_controller/src/: cartesian_pose_controller.cpp
src/communication_interfaces/: CMakeLists.txt  package.xml
src/communication_interfaces/action/: Cartesian.action  Target.action
src/communication_interfaces/msg/: OperX.msg  Sequence.msg  TargX.msg
src/communication_interfaces/srv/: Cartesian.srv  Grasp.srv  TargetPoint.srv
src/franka_gripper/: CMakeLists.txt  package.xml
src/franka_gripper/include/franka_gripper/: gripper_action_server.hpp
src/franka_gripper/launch/: gripper.launch.py
src/franka_gripper/scripts/: fake_gripper_state_publisher.py
src/franka_gripper/src/: gripper_action_server.cpp
src/grasp_parameters_server/: CMakeLists.txt  package.xml
src/grasp_parameters_server/src/: grasp_parameters_client.cpp  grasp_parameters_server.cpp
src/ik_impedance_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/ik_impedance_controller/config/: controllers.yaml
src/ik_impedance_controller/include/ik_impedance_controller/: default_robot_behavior_utils.hpp  ik_impedance_controller.hpp  motion_generator.hpp
src/ik_impedance_controller/launch/: franka.launch.py  start.py
src/ik_impedance_controller/src/: ik_impedance_controller.cpp  motion_generator.cpp
src/llm_initialize/: CMakeLists.txt  package.xml
src/llm_initialize/src/: llm_initialize.cpp  llm_output_test.cpp  llm_subscriber_test.cpp
src/llm_robotics_center/: CMakeLists.txt  package.xml
src/llm_robotics_center/src/: action_client_test.cpp  cartesian_client_test.cpp  gripper_client_test.cpp  llm_robotics_center.cpp  target_point_client_test.cpp
src/target_parameters_server/: CMakeLists.txt  package.xml
src/target_parameters_server/src/: target_point_server.cpp
